# GPTToAidTDD

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
gpt_tester/: __init__.py  core.py
